--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -22,16 +22,14 @@
     background-color: darkviolet;
 }
 
-/* Card container */
 .row {
     width: 80%;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
-    gap: 20px; /* Gap between grid items */
+    gap: 20px; 
 }
 
-/* Card styling */
 .card-container{
     width: 100%;
 }
@@ -58,13 +56,11 @@
     margin-bottom: 20px;
 }
 
-/* Additional background elements */
 body {
-    background-color: #f8f9fa; /* Light background color */
+    background-color: #f8f9fa; 
 }
 
 
-/* Animations */
 .fade-in {
     opacity: 0;
     animation: fadeInAnimation ease 1s forwards;
@@ -80,3 +76,57 @@ body {
         transform: translateY(0);
     }
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    background-color: blueviolet;
+    z-index: 100;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  #btn-back-to-top:hover {
+    background-color: darkviolet;
+  }
+
+  .fade-in {
+    opacity: 0;
+    animation: fadeInAnimation ease 1s forwards;
+  }
+
+  @keyframes fadeInAnimation {
+    0% {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .card {
+    background-color: #343a40;
+    color: #fff;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  }
+
+  .card:hover {
+    transform: translateY(-5px);
+  }
+
+  .card h5 {
+    color: #17a2b8;
+  }
